[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Background/Space/FlickeringStars.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Background/Space/Space_Planets.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Background/Space/Space_StarsBasic.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MainLevel/Background/ParallaxBackground.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 1440, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 1920, 0, 480, 270 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 2400, 0, 480, 270 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 2.5
} ]

[node name="ParallaxBackground2" type="ParallaxBackground"]
layer = -3
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -299.5
margin_top = -180.5
margin_right = 299.5
margin_bottom = 180.5
mouse_filter = 2
color = Color( 0.0823529, 0.0745098, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetsLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 480, 135 )

[node name="Planets" type="Sprite" parent="PlanetsLayer"]
modulate = Color( 1.3, 1.3, 1.3, 1 )
position = Vector2( 0, -24.2793 )
texture = ExtResource( 3 )
centered = false

[node name="BasicStarsLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 480, 135 )

[node name="BasicStars" type="Sprite" parent="BasicStarsLayer"]
modulate = Color( 1.35, 1.35, 1.35, 1 )
texture = ExtResource( 4 )
centered = false

[node name="FlickeringStarsLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 480, 135 )

[node name="FlickeringStars" type="AnimatedSprite" parent="FlickeringStarsLayer"]
modulate = Color( 1.4, 1.4, 1.4, 1 )
frames = SubResource( 7 )
frame = 1
playing = true
centered = false
